hospital-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hospital-route
spec:
  parentRefs:
  - name: micro-gateway
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /hospital
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
      - name: hospital-service
        port: 80
